--- a/src/aura/ActionBuilder/ActionBuilder.css
+++ b/src/aura/ActionBuilder/ActionBuilder.css
@@ -228,6 +228,17 @@
 .THIS .rdna-required{
     color:Tomato;
 }
+.THIS .rdna-sub-header-small{
+    font-family: Logical;
+    font-size: 14px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.71;
+    letter-spacing: normal;
+    text-align: center;
+    color: #979797;
+}
 /*.THIS .slds-dropdown-trigger.slds-is-open .slds-listbox__option.slds-has-focus {
 background-color: blue;
 }
