--- a/src/aura/ActionDetails/ActionDetails.css
+++ b/src/aura/ActionDetails/ActionDetails.css
@@ -36,24 +36,24 @@
 
 /*Header css */
 .THIS .rdna-header-small {
-  font-family: Logical;
-  font-size: 14px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #000000;
+    font-family: Logical;
+    font-size: 14px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #000000;
 }
 .THIS .rdna-header-large { 
-  font-family: Logical;
-  font-size: 38px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #000000;
+    font-family: Logical;
+    font-size: 38px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #000000;
 }
 /*Header css */
 
@@ -136,7 +136,7 @@
     background-color: #fafafa !important;
     border-radius: 6px !important;
 }
- 
+
 @font-face {
     font-family: 'Logical';
     src: url(/resource/RDNACadence__LogicalFontRegular) format('woff');
@@ -176,5 +176,8 @@
     margin-left : 35px;    
 }
 .THIS .rdna-name-styling{
-    margin-left : 70px;
+    margin-left : 65px;
+}
+.THIS .rdna-bottom-margin{
+    padding-bottom: 18px;
 }
