--- a/src/aura/ActionBuilder/ActionBuilder.css
+++ b/src/aura/ActionBuilder/ActionBuilder.css
@@ -226,7 +226,15 @@
     margin-top: 30px;
 }
 .THIS .rdna-required{
-    color:Tomato;
+    font-family: Logical;
+    font-size: 14px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.71;
+    letter-spacing: normal;
+    text-align: center;
+    color:red;
 }
 .THIS .rdna-sub-header-small{
     font-family: Logical;
