--- a/src/aura/ActionTemplateList/ActionTemplateList.css
+++ b/src/aura/ActionTemplateList/ActionTemplateList.css
@@ -240,5 +240,5 @@
     border: solid 1px #979797 !important;
 }
 .THIS .rdna-sort-margin{
-    margin-top: 30px !important;
+    margin-top: 30px;
 }
