--- a/src/pages/EditActionDetails.page
+++ b/src/pages/EditActionDetails.page
@@ -1,4 +1,7 @@
 <apex:page standardcontroller="Action__c" extensions="GetNamespace" sidebar="false" tabStyle="Cadence_Actions_Classic__tab" showHeader="true">
+    <style type="text/css">
+    .rdna-classic-margin { margin-top: 15px !important; }
+    </style>
     <script src="/lightning/lightning.out.js"/>
     <apex:slds />
     <div id="myDivId3" />
