Code commited for feature/SFDC-357-QA Issue fix

--- a/src/aura/NativeEmail/NativeEmail.css
+++ b/src/aura/NativeEmail/NativeEmail.css
@@ -92,6 +92,7 @@
     font-family: Logical !important;
   	font-size: 12px !important;
     padding: 10px 0px 10px 25px !important;
+    color: #000000;
 }
 .THIS .slds-select{
     border-radius: 6px !important;
